--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>CardElement</title>
@@ -7,7 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+  <facebook-card >
+  </facebook-card>
+
+  <script>
+    const el = document.querySelector('facebook-card');
+
+    el.addEventListener('likeNotify', e => {
+      console.log('Like Cliked');
+    });
+  </script>
 </body>
 </html>
